<resources>
    <string name="app_name">Absent App</string>
    <string name="todo">TODO</string>
    <string name="hello_sign_in_your_account">Hello, Sign In Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="absent">Absent</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_text">-</string>
    <string name="absent_spot">Absent Spot</string>
    <string name="employee_details">Employee Details</string>
    <string name="logout">LOGOUT</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="leave">Leave</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="id">ID :</string>
    <string name="check_out">Check Out</string>
    <string name="check_in">Check In</string>
    <string name="history">History</string>
    <string name="fab_for_leave_request">FAB for Leave Request</string>
    <string name="status">Status</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="total_days">Total Days</string>
    <string name="leave_type">Leave Type</string>
    <string name="reason">Reason</string>
    <string name="colon">:</string>
    <string name="select_leave_type">Select Leave Type</string>
    <string name="submit">SUBMIT</string>
    <string name="change_photo">Change Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="employee_id">Employee ID</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="date_of_joining">Date of Joining</string>
    <string name="division">Division</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="update_profile">Update Profile</string>
    <string name="current_location">Current Location</string>
    <string name="fab_absent_spot">FAB Absent Spot</string>
    <string name="please_field_your_email">Please field your email!</string>
    <string name="please_use_valid_email">Please use valid email!</string>
    <string name="please_field_your_password">Please field your password!</string>
    <string name="failed">Failed</string>
    <string name="sign_out">Sign Out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert">Alert</string>
    <string name="something_wrong">Something Wrong</string>
    <string name="please_field_your_fullname">Please field your fullname!</string>
    <string name="success">Success</string>
    <string name="not_granted">Not Granted</string>
    <string name="required_permission">Required Permission</string>
    <string name="search_your_location">Search your location...</string>
    <string name="location">Location</string>
    <string name="successfully_allowed">Successfully allowed</string>
    <string name="app_permission_denied">App permission denied.</string>
    <string name="settings">Settings</string>
    <string name="you_are_already_present_today">You are already present today.</string>
    <string name="check_in_success">Check In Success</string>
    <string name="check_out_seccess">Check Out Success</string>
    <string name="you_are_outside_the_absence_area">You are outside the absence area</string>
    <string name="your_password_has_been_update">Your password has been update</string>
    <string name="your_password_didnt_match">Your password didn\'t match</string>
    <string name="your_spot_of_absence_is_rejected">Your spot of absence is rejected.</string>
    <string name="your_place_of_absence_is_awaiting_approval">Your place of absence is awaiting approval.</string>
    <string name="you_do_not_have_a_absent_spot_please_apply_for_your_absent_spot">You do not have a absent spot, please apply for your absent spot.</string>
</resources>