<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.forgotpassword.ForgotPasswordActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/forgot_password2"
            app:titleTextColor="@color/color_primary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColorHint="@android:color/darker_gray"
        app:hintEnabled="true"
        app:boxStrokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@+id/appbar_forgot_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_btn_primary"
        android:text="@string/sign_in"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ti_email_forgot_password"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>